[package]
name = "drm"
version = "0.1.0"
authors = ["Tristram Healy <trissylegs@gmail.com>"]

[dependencies]
libc = "*"
bitflags = "*"
memmap = "*"
futures = { version = "*", optional = true }
tokio-core = { version = "*", optional = true }
mio = { version = "*", optional = true }

[features]
default = []
tokio = ["futures", "tokio-core", "mio"]
